src/test/ui/const-generics/params-in-ct-in-ty-param-lazy-norm.stderr
error: type parameters with a default must be trailing
  --> $DIR/params-in-ct-in-ty-param-lazy-norm.rs:7:12
   |
LL | struct Bar<T = [u8; N], const N: usize>(T);
   |            ^
   |
   = note: using type defaults and const parameters in the same parameter list is currently not permitted

error: constant values inside of type parameter defaults must not depend on generic parameters
  --> $DIR/params-in-ct-in-ty-param-lazy-norm.rs:3:44
   |
LL | struct Foo<T, U = [u8; std::mem::size_of::<T>()]>(T, U);
   |                                            ^ the anonymous constant must not depend on the parameter `T`

error: constant values inside of type parameter defaults must not depend on generic parameters
  --> $DIR/params-in-ct-in-ty-param-lazy-norm.rs:7:21
   |
LL | struct Bar<T = [u8; N], const N: usize>(T);
   |                     ^ the anonymous constant must not depend on the parameter `N`

warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/params-in-ct-in-ty-param-lazy-norm.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error: aborting due to 3 previous errors; 1 warning emitted

